--- a/AspNetIdentity.WebApi/Web.config
+++ b/AspNetIdentity.WebApi/Web.config
@@ -13,13 +13,12 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=AspNetIdentity;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost;User Id=memo;pwd=P@ssword23!;Persist Security Info=True;database=AspNetIdentity.WebApi" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="emailService:Account" value="" />
-    <add key="emailService:Password" value="" />
-    <add key="as:AudienceId" value="414e1927a3884f68abc79f7283837fd1" />
-    <add key="as:AudienceSecret" value="qMCdFDQuF23RV1Y-1Gq9L3cF3VmuFwVbam4fMTdAfpo" />
+    <add key="EmailFileWriterPath" value="C:\AspNetIdentity\EmailFiles"/>
+    <add key="as:AudienceId" value="524f2037a3884f68abc79f7283837fd1" />
+    <add key="as:AudienceSecret" value="rNDdFDQuF23RV1Y-1Gq9L3cF3VmuFwVbam4fMTdAgqo" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
